--- a/herencia/index.html
+++ b/herencia/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div class="contenedor">
-        <div style="background-color: #6A5ACD; color: #E0FFFF;" class="divForm">
+        <div style="background-color: #999; color: #080e8a;" class="divForm">
             <form action="eleccion.php" method="post" class="form">
                 <h4>Elija una figura:</h4>
                 <select name="figura" id="selectFigura">
@@ -28,12 +28,16 @@
             width:100%;
             height:100vh;
             position:relative;
-            background-color: red;
+            background-image: radial-gradient(#111ae2, black);
         }
         .divForm {
             padding: 15px;
             position:absolute;
-
+            left: 50%;
+            top: 50%;
+            transform: translate(-50%, -50%);
+            border: 3px solid black;
+            text-align: center;
         }
     </style>
 </body>
