--- a/prueba2.html
+++ b/prueba2.html
@@ -6,16 +6,26 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Calculadora con JS</h1>
-    <form>
-        <label for="number1">Intruduzca un número: </label>
-        <input type="number" id="number1" /><br>
-        <label for="number2">Intruduzca otro número: </label>
-        <input type="number" id="number2" /><br>
-        <input type="button" onclick="resta()" value="Calcular"><br>
-    </form>
-    <label >El resultado es: </label>
-    <label id="resultado"></label>
+    
+    <div class="main-cont">
+        <div class="contenedor">
+            <h1>Calculadora con JS</h1>
+            <form>
+                <label for="number1">Intruduzca un número: </label>
+                <input type="number" class="number" id="number1" /><br>
+                <label for="number2">Intruduzca otro número: </label>
+                <input type="number" class="number" id="number2" /><br>
+                <input type="button" class="button" onclick="suma()" value="Suma"> 
+                <input type="button" class="button" onclick="resta()" value="Resta">
+                <input type="button" class="button" onclick="multiplicar()" value="Multiplicar">
+                <input type="button" class="button" onclick="division()" value="Dividir"><br>
+            </form>
+            <label >El resultado es: </label>
+            <label id="resultado"></label>
+        </div>
+    </div>
+
+
     <script>
         function resta() {
             let number1 = document.getElementById("number1").value;
@@ -23,6 +33,45 @@
             let resultado = number1 - number2;
             document.getElementById("resultado").innerHTML = resultado;
         }
+        function suma() {
+            let number1 = document.getElementById("number1").value;
+            let number2 = document.getElementById("number2").value;
+            let resultado = parseInt(number1)  + parseInt(number2);
+            document.getElementById("resultado").innerHTML = resultado;
+        }
+        function multiplicar() {
+            let number1 = document.getElementById("number1").value;
+            let number2 = document.getElementById("number2").value;
+            let resultado = number1 * number2;
+            document.getElementById("resultado").innerHTML = resultado;
+        }
+        function division() {
+            let number1 = document.getElementById("number1").value;
+            let number2 = document.getElementById("number2").value;
+            let resultado = number1 / number2;
+            document.getElementById("resultado").innerHTML = resultado;
+        }
     </script>
+
+    <style>
+        .main-cont {
+            display: flex;
+            height: 100vh;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+        }
+        .contenedor {
+            padding: 25px;
+            border: 1px solid black;
+            background-color: lightblue;
+        }
+        .button {
+            margin: 5px;
+        }
+        .number {
+            margin: 5px;
+        }
+    </style>
 </body>
 </html>
