--- a/prueba2.html
+++ b/prueba2.html
@@ -15,10 +15,22 @@
                 <input type="number" class="number" id="number1" /><br>
                 <label for="number2">Intruduzca otro número: </label>
                 <input type="number" class="number" id="number2" /><br>
+                <div class="cont-numbers">
+                    <input type="button" id="1" class="button uno"  value="1">
+                    <input type="button" id="2" class="button dos"  value="2">
+                    <input type="button" id="3" class="button tres"  value="3"><br>
+                    <input type="button" id="4" class="button cuatro"  value="4">
+                    <input type="button" id="5" class="button cinco"  value="5">
+                    <input type="button" id="6" class="button seis"  value="6"><br>
+                    <input type="button" id="7" class="button siete"  value="7">
+                    <input type="button" id="8" class="button ocho"  value="8">
+                    <input type="button" id="9" class="button nueve"     value="9"><br>
+                    <input type="button" id="0" class="button cero"  value="0"><br>
+                </div>
                 <input type="button" class="button" onclick="suma()" value="Suma"> 
                 <input type="button" class="button" onclick="resta()" value="Resta">
-                <input type="button" class="button" onclick="multiplicar()" value="Multiplicar">
-                <input type="button" class="button" onclick="division()" value="Dividir"><br>
+                <input type="button" class="button" onclick="multiplicar()" value="Multiplicación">
+                <input type="button" class="button" onclick="division()" value="División"><br>
             </form>
             <label >El resultado es: </label>
             <label id="resultado"></label>
@@ -27,6 +39,31 @@
 
 
     <script>
+        let seleccion = "number1";
+        number1.addEventListener("click", function() {
+            seleccion = "number1";
+            numero = 0;
+        }, false);
+        number2.addEventListener("click", function() {
+            seleccion = "number2";
+            numero = 0;
+        }, false);
+        let numero;
+        for (let i=0 ; i<10 ; i++) {
+            let j = document.getElementById(i);
+            j.addEventListener("click", function () {
+                if (numero != undefined) {
+                    numero = parseInt(numero.toString()+i.toString());
+                }
+                else {
+                    numero = i;
+                }
+
+                console.log(numero);
+                document.getElementById(seleccion).value = numero;
+            },
+            false);
+        }
         function resta() {
             let number1 = document.getElementById("number1").value;
             let number2 = document.getElementById("number2").value;
